fix(header-nav): submenu z-index

--- a/src/components/global/header/headerLink.scss
+++ b/src/components/global/header/headerLink.scss
@@ -118,16 +118,20 @@
 
 .menu {
   &.open {
-    &.level--2 .menu__content {
-      z-index: 0;
-    }
-
     .menu__content {
       z-index: -1;
 
       @media (min-width: 42rem) {
         transform: none;
       }
+    }
+
+    &.level--2 .menu__content {
+      z-index: 1;
+    }
+
+    &.level--3 .menu__content {
+      z-index: 1;
     }
 
     .interactive {
